# open_forms

./: .gitignore  README.md  in.aryank.openforms.json  meson.build
data/: in.aryank.openforms.desktop.in  in.aryank.openforms.gschema.xml  in.aryank.openforms.metainfo.xml.in  in.aryank.openforms.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
snap/: snapcraft.yaml
src/: builder_page.py  builder_page.ui  field_editor_row.py  field_type_dialog.py  form_config.py  form_config.ui  form_model.py  form_page.py  form_page.ui  history_dialog.py  history_manager.py  kiosk_manager.py  main.py  meson.build  open_forms.gresource.xml  open_forms.in  page.py  response_viewer.py  utils.py  window.py  window.ui
